Fix swagger host and add timestamp to health
